# audiolibrary-client

./: .gitignore  README.md  audiolibrary.sh  config.ini  install.sh  pyproject.toml  uninstall.sh
src/audiolibrary/: api_service.py  config.ini  config.py  main.py
src/audiolibrary/controllers/: __init__.py  auth.py  browse.py  control.py  liked.py  main.py  popular.py  settings.py  upload.py
src/audiolibrary/models/: __init__.py  auth.py  base.py  browse.py  control.py  liked.py  login.py  main.py  popular.py  settings.py  upload.py
src/audiolibrary/models/schemas/: music.py
src/audiolibrary/themes/: base.py  default.py  sakura.py
src/audiolibrary/utils/: icon.py  theme.py
src/audiolibrary/views/auth/: __init__.py  static_ui.py
src/audiolibrary/views/browse/: __init__.py  static_ui.py
src/audiolibrary/views/control/: __init__.py  static_ui.py
src/audiolibrary/views/liked/: __init__.py  static_ui.py
src/audiolibrary/views/main/: __init__.py  static_ui.py
src/audiolibrary/views/popular/: __init__.py  static_ui.py
src/audiolibrary/views/settings/: __init__.py  static_ui.py
src/audiolibrary/views/test/: __init__.py  static_ui.py
src/audiolibrary/views/upload/: __init__.py  static_ui.py
src/audiolibrary/views/widgets/: __init__.py  audio_item.py  audio_player.py  button.py  button_outline.py  dialog.py  file_select_box.py  line_edit.py  list.py  message_box.py  slide_show.py
